--- a/500px API Test/500px API Test/PhotoTableViewCell.xib
+++ b/500px API Test/500px API Test/PhotoTableViewCell.xib
@@ -38,39 +38,33 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="733591161">
+			<object class="IBUITableViewCell" id="359547681">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUIView" id="675519438">
-						<reference key="NSNextResponder" ref="733591161"/>
+					<object class="IBUIView" id="570343744">
+						<reference key="NSNextResponder" ref="359547681"/>
 						<int key="NSvFlags">256</int>
 						<object class="NSMutableArray" key="NSSubviews">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUIImageView" id="718680486">
-								<reference key="NSNextResponder" ref="675519438"/>
-								<int key="NSvFlags">260</int>
+							<object class="IBUIImageView" id="625027618">
+								<reference key="NSNextResponder" ref="570343744"/>
+								<int key="NSvFlags">278</int>
 								<string key="NSFrameSize">{140, 140}</string>
-								<reference key="NSSuperview" ref="675519438"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="879095291"/>
+								<reference key="NSSuperview" ref="570343744"/>
+								<reference key="NSNextKeyView" ref="22912731"/>
 								<string key="NSReuseIdentifierKey">_NS:544</string>
-								<int key="IBUIContentMode">2</int>
+								<int key="IBUIContentMode">4</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">grey.png</string>
-								</object>
 							</object>
-							<object class="IBUILabel" id="879095291">
-								<reference key="NSNextResponder" ref="675519438"/>
+							<object class="IBUILabel" id="22912731">
+								<reference key="NSNextResponder" ref="570343744"/>
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{148, 8}, {600, 30}}</string>
-								<reference key="NSSuperview" ref="675519438"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="969742806"/>
+								<reference key="NSSuperview" ref="570343744"/>
+								<reference key="NSNextKeyView" ref="524289513"/>
 								<string key="NSReuseIdentifierKey">_NS:327</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -83,7 +77,7 @@
 									<double key="NSSize">24</double>
 									<int key="NSfFlags">16</int>
 								</object>
-								<object class="NSColor" key="IBUITextColor" id="725192755">
+								<object class="NSColor" key="IBUITextColor" id="988326096">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
 								</object>
@@ -91,13 +85,12 @@
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 							</object>
-							<object class="IBUILabel" id="908910296">
-								<reference key="NSNextResponder" ref="675519438"/>
+							<object class="IBUILabel" id="590101711">
+								<reference key="NSNextResponder" ref="570343744"/>
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{148, 75}, {600, 21}}</string>
-								<reference key="NSSuperview" ref="675519438"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="942995145"/>
+								<reference key="NSSuperview" ref="570343744"/>
+								<reference key="NSNextKeyView" ref="890981997"/>
 								<string key="NSReuseIdentifierKey">_NS:327</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -105,22 +98,21 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<string key="IBUIText">Category, Rating: 100</string>
-								<object class="NSFont" key="IBUIFont" id="366219309">
+								<object class="NSFont" key="IBUIFont" id="550829335">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">17</double>
 									<int key="NSfFlags">16</int>
 								</object>
-								<reference key="IBUITextColor" ref="725192755"/>
+								<reference key="IBUITextColor" ref="988326096"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 							</object>
-							<object class="IBUILabel" id="942995145">
-								<reference key="NSNextResponder" ref="675519438"/>
+							<object class="IBUILabel" id="890981997">
+								<reference key="NSNextResponder" ref="570343744"/>
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{148, 104}, {600, 21}}</string>
-								<reference key="NSSuperview" ref="675519438"/>
-								<reference key="NSWindow"/>
+								<reference key="NSSuperview" ref="570343744"/>
 								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:327</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -129,19 +121,18 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<string key="IBUIText">Created: such and such a date</string>
-								<reference key="IBUIFont" ref="366219309"/>
-								<reference key="IBUITextColor" ref="725192755"/>
+								<reference key="IBUIFont" ref="550829335"/>
+								<reference key="IBUITextColor" ref="988326096"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 							</object>
-							<object class="IBUILabel" id="969742806">
-								<reference key="NSNextResponder" ref="675519438"/>
+							<object class="IBUILabel" id="524289513">
+								<reference key="NSNextResponder" ref="570343744"/>
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{148, 46}, {600, 21}}</string>
-								<reference key="NSSuperview" ref="675519438"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="908910296"/>
+								<reference key="NSSuperview" ref="570343744"/>
+								<reference key="NSNextKeyView" ref="590101711"/>
 								<string key="NSReuseIdentifierKey">_NS:327</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -149,17 +140,16 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<string key="IBUIText">Photopgraher Name</string>
-								<reference key="IBUIFont" ref="366219309"/>
-								<reference key="IBUITextColor" ref="725192755"/>
+								<reference key="IBUIFont" ref="550829335"/>
+								<reference key="IBUITextColor" ref="988326096"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 							</object>
 						</object>
 						<string key="NSFrameSize">{768, 140}</string>
-						<reference key="NSSuperview" ref="733591161"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="718680486"/>
+						<reference key="NSSuperview" ref="359547681"/>
+						<reference key="NSNextKeyView" ref="625027618"/>
 						<string key="NSReuseIdentifierKey">_NS:370</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -174,8 +164,7 @@
 				</object>
 				<string key="NSFrameSize">{768, 140}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="675519438"/>
+				<reference key="NSNextKeyView" ref="570343744"/>
 				<string key="NSReuseIdentifierKey">_NS:358</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
@@ -183,7 +172,7 @@
 				</object>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 				<int key="IBUISeparatorStyle">1</int>
-				<reference key="IBUIContentView" ref="675519438"/>
+				<reference key="IBUIContentView" ref="570343744"/>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -192,40 +181,40 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">categoryRatingLabel</string>
-						<reference key="source" ref="733591161"/>
-						<reference key="destination" ref="908910296"/>
+						<reference key="source" ref="359547681"/>
+						<reference key="destination" ref="590101711"/>
 					</object>
 					<int key="connectionID">9</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">createdDateLabel</string>
-						<reference key="source" ref="733591161"/>
-						<reference key="destination" ref="942995145"/>
+						<reference key="source" ref="359547681"/>
+						<reference key="destination" ref="890981997"/>
 					</object>
 					<int key="connectionID">10</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">photographerNameLabel</string>
-						<reference key="source" ref="733591161"/>
-						<reference key="destination" ref="969742806"/>
+						<reference key="source" ref="359547681"/>
+						<reference key="destination" ref="524289513"/>
 					</object>
 					<int key="connectionID">11</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">photoImageView</string>
-						<reference key="source" ref="733591161"/>
-						<reference key="destination" ref="718680486"/>
+						<reference key="source" ref="359547681"/>
+						<reference key="destination" ref="625027618"/>
 					</object>
 					<int key="connectionID">12</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">nameLabel</string>
-						<reference key="source" ref="733591161"/>
-						<reference key="destination" ref="879095291"/>
+						<reference key="source" ref="359547681"/>
+						<reference key="destination" ref="22912731"/>
 					</object>
 					<int key="connectionID">13</int>
 				</object>
@@ -252,42 +241,42 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">2</int>
-						<reference key="object" ref="733591161"/>
+						<reference key="object" ref="359547681"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="718680486"/>
-							<reference ref="879095291"/>
-							<reference ref="969742806"/>
-							<reference ref="908910296"/>
-							<reference ref="942995145"/>
+							<reference ref="625027618"/>
+							<reference ref="22912731"/>
+							<reference ref="524289513"/>
+							<reference ref="590101711"/>
+							<reference ref="890981997"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
-						<reference key="object" ref="718680486"/>
-						<reference key="parent" ref="733591161"/>
+						<reference key="object" ref="625027618"/>
+						<reference key="parent" ref="359547681"/>
 						<string key="objectName">Photo Image</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="879095291"/>
-						<reference key="parent" ref="733591161"/>
+						<reference key="object" ref="22912731"/>
+						<reference key="parent" ref="359547681"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="908910296"/>
-						<reference key="parent" ref="733591161"/>
+						<reference key="object" ref="590101711"/>
+						<reference key="parent" ref="359547681"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
-						<reference key="object" ref="942995145"/>
-						<reference key="parent" ref="733591161"/>
+						<reference key="object" ref="890981997"/>
+						<reference key="parent" ref="359547681"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="969742806"/>
-						<reference key="parent" ref="733591161"/>
+						<reference key="object" ref="524289513"/>
+						<reference key="parent" ref="359547681"/>
 					</object>
 				</object>
 			</object>
@@ -334,72 +323,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">13</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<bool key="EncodedWithXMLCoder">YES</bool>
-				<object class="IBPartialClassDescription">
-					<string key="className">PhotoTableViewCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>categoryRatingLabel</string>
-							<string>createdDateLabel</string>
-							<string>nameLabel</string>
-							<string>photoImageView</string>
-							<string>photographerNameLabel</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>UILabel</string>
-							<string>UILabel</string>
-							<string>UILabel</string>
-							<string>UIImageView</string>
-							<string>UILabel</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>categoryRatingLabel</string>
-							<string>createdDateLabel</string>
-							<string>nameLabel</string>
-							<string>photoImageView</string>
-							<string>photographerNameLabel</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">categoryRatingLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">createdDateLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">nameLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">photoImageView</string>
-								<string key="candidateClassName">UIImageView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">photographerNameLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PhotoTableViewCell.h</string>
-					</object>
-				</object>
-			</object>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
@@ -408,10 +332,6 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="NS.key.0">grey.png</string>
-			<string key="NS.object.0">{4, 4}</string>
-		</object>
 		<string key="IBCocoaTouchPluginVersion">534</string>
 	</data>
 </archive>
