--- a/500px API Test/500px API Test/PhotoTableViewCell.xib
+++ b/500px API Test/500px API Test/PhotoTableViewCell.xib
@@ -38,33 +38,35 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="359547681">
+			<object class="IBUITableViewCell" id="637094725">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUIView" id="570343744">
-						<reference key="NSNextResponder" ref="359547681"/>
+					<object class="IBUIView" id="261453555">
+						<reference key="NSNextResponder" ref="637094725"/>
 						<int key="NSvFlags">256</int>
 						<object class="NSMutableArray" key="NSSubviews">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUIImageView" id="625027618">
-								<reference key="NSNextResponder" ref="570343744"/>
+							<object class="IBUIImageView" id="11186577">
+								<reference key="NSNextResponder" ref="261453555"/>
 								<int key="NSvFlags">278</int>
 								<string key="NSFrameSize">{140, 140}</string>
-								<reference key="NSSuperview" ref="570343744"/>
-								<reference key="NSNextKeyView" ref="22912731"/>
+								<reference key="NSSuperview" ref="261453555"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="838063447"/>
 								<string key="NSReuseIdentifierKey">_NS:544</string>
 								<int key="IBUIContentMode">4</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 							</object>
-							<object class="IBUILabel" id="22912731">
-								<reference key="NSNextResponder" ref="570343744"/>
+							<object class="IBUILabel" id="838063447">
+								<reference key="NSNextResponder" ref="261453555"/>
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{148, 8}, {600, 30}}</string>
-								<reference key="NSSuperview" ref="570343744"/>
-								<reference key="NSNextKeyView" ref="524289513"/>
+								<reference key="NSSuperview" ref="261453555"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="186041608"/>
 								<string key="NSReuseIdentifierKey">_NS:327</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -77,7 +79,7 @@
 									<double key="NSSize">24</double>
 									<int key="NSfFlags">16</int>
 								</object>
-								<object class="NSColor" key="IBUITextColor" id="988326096">
+								<object class="NSColor" key="IBUITextColor" id="162224609">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
 								</object>
@@ -85,12 +87,13 @@
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 							</object>
-							<object class="IBUILabel" id="590101711">
-								<reference key="NSNextResponder" ref="570343744"/>
+							<object class="IBUILabel" id="1029274356">
+								<reference key="NSNextResponder" ref="261453555"/>
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{148, 75}, {600, 21}}</string>
-								<reference key="NSSuperview" ref="570343744"/>
-								<reference key="NSNextKeyView" ref="890981997"/>
+								<reference key="NSSuperview" ref="261453555"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="1043580910"/>
 								<string key="NSReuseIdentifierKey">_NS:327</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -98,21 +101,22 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<string key="IBUIText">Category, Rating: 100</string>
-								<object class="NSFont" key="IBUIFont" id="550829335">
+								<object class="NSFont" key="IBUIFont" id="903575679">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">17</double>
 									<int key="NSfFlags">16</int>
 								</object>
-								<reference key="IBUITextColor" ref="988326096"/>
+								<reference key="IBUITextColor" ref="162224609"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 							</object>
-							<object class="IBUILabel" id="890981997">
-								<reference key="NSNextResponder" ref="570343744"/>
+							<object class="IBUILabel" id="1043580910">
+								<reference key="NSNextResponder" ref="261453555"/>
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{148, 104}, {600, 21}}</string>
-								<reference key="NSSuperview" ref="570343744"/>
+								<reference key="NSSuperview" ref="261453555"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:327</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -121,18 +125,19 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<string key="IBUIText">Created: such and such a date</string>
-								<reference key="IBUIFont" ref="550829335"/>
-								<reference key="IBUITextColor" ref="988326096"/>
+								<reference key="IBUIFont" ref="903575679"/>
+								<reference key="IBUITextColor" ref="162224609"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 							</object>
-							<object class="IBUILabel" id="524289513">
-								<reference key="NSNextResponder" ref="570343744"/>
+							<object class="IBUILabel" id="186041608">
+								<reference key="NSNextResponder" ref="261453555"/>
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{148, 46}, {600, 21}}</string>
-								<reference key="NSSuperview" ref="570343744"/>
-								<reference key="NSNextKeyView" ref="590101711"/>
+								<reference key="NSSuperview" ref="261453555"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="1029274356"/>
 								<string key="NSReuseIdentifierKey">_NS:327</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -140,16 +145,17 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<string key="IBUIText">Photopgraher Name</string>
-								<reference key="IBUIFont" ref="550829335"/>
-								<reference key="IBUITextColor" ref="988326096"/>
+								<reference key="IBUIFont" ref="903575679"/>
+								<reference key="IBUITextColor" ref="162224609"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 							</object>
 						</object>
 						<string key="NSFrameSize">{768, 140}</string>
-						<reference key="NSSuperview" ref="359547681"/>
-						<reference key="NSNextKeyView" ref="625027618"/>
+						<reference key="NSSuperview" ref="637094725"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="11186577"/>
 						<string key="NSReuseIdentifierKey">_NS:370</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -164,15 +170,17 @@
 				</object>
 				<string key="NSFrameSize">{768, 140}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="570343744"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="261453555"/>
 				<string key="NSReuseIdentifierKey">_NS:358</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
 					<bytes key="NSRGB">MSAxIDEAA</bytes>
 				</object>
+				<bool key="IBUIClipsSubviews">YES</bool>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 				<int key="IBUISeparatorStyle">1</int>
-				<reference key="IBUIContentView" ref="570343744"/>
+				<reference key="IBUIContentView" ref="261453555"/>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -181,40 +189,40 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">categoryRatingLabel</string>
-						<reference key="source" ref="359547681"/>
-						<reference key="destination" ref="590101711"/>
+						<reference key="source" ref="637094725"/>
+						<reference key="destination" ref="1029274356"/>
 					</object>
 					<int key="connectionID">9</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">createdDateLabel</string>
-						<reference key="source" ref="359547681"/>
-						<reference key="destination" ref="890981997"/>
+						<reference key="source" ref="637094725"/>
+						<reference key="destination" ref="1043580910"/>
 					</object>
 					<int key="connectionID">10</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">photographerNameLabel</string>
-						<reference key="source" ref="359547681"/>
-						<reference key="destination" ref="524289513"/>
+						<reference key="source" ref="637094725"/>
+						<reference key="destination" ref="186041608"/>
 					</object>
 					<int key="connectionID">11</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">photoImageView</string>
-						<reference key="source" ref="359547681"/>
-						<reference key="destination" ref="625027618"/>
+						<reference key="source" ref="637094725"/>
+						<reference key="destination" ref="11186577"/>
 					</object>
 					<int key="connectionID">12</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">nameLabel</string>
-						<reference key="source" ref="359547681"/>
-						<reference key="destination" ref="22912731"/>
+						<reference key="source" ref="637094725"/>
+						<reference key="destination" ref="838063447"/>
 					</object>
 					<int key="connectionID">13</int>
 				</object>
@@ -241,42 +249,42 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">2</int>
-						<reference key="object" ref="359547681"/>
+						<reference key="object" ref="637094725"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="625027618"/>
-							<reference ref="22912731"/>
-							<reference ref="524289513"/>
-							<reference ref="590101711"/>
-							<reference ref="890981997"/>
+							<reference ref="11186577"/>
+							<reference ref="838063447"/>
+							<reference ref="186041608"/>
+							<reference ref="1029274356"/>
+							<reference ref="1043580910"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
-						<reference key="object" ref="625027618"/>
-						<reference key="parent" ref="359547681"/>
+						<reference key="object" ref="11186577"/>
+						<reference key="parent" ref="637094725"/>
 						<string key="objectName">Photo Image</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="22912731"/>
-						<reference key="parent" ref="359547681"/>
+						<reference key="object" ref="838063447"/>
+						<reference key="parent" ref="637094725"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="590101711"/>
-						<reference key="parent" ref="359547681"/>
+						<reference key="object" ref="1029274356"/>
+						<reference key="parent" ref="637094725"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
-						<reference key="object" ref="890981997"/>
-						<reference key="parent" ref="359547681"/>
+						<reference key="object" ref="1043580910"/>
+						<reference key="parent" ref="637094725"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="524289513"/>
-						<reference key="parent" ref="359547681"/>
+						<reference key="object" ref="186041608"/>
+						<reference key="parent" ref="637094725"/>
 					</object>
 				</object>
 			</object>
@@ -323,7 +331,72 @@
 			<nil key="sourceID"/>
 			<int key="maxID">13</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">PhotoTableViewCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>categoryRatingLabel</string>
+							<string>createdDateLabel</string>
+							<string>nameLabel</string>
+							<string>photoImageView</string>
+							<string>photographerNameLabel</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>UILabel</string>
+							<string>UILabel</string>
+							<string>UILabel</string>
+							<string>UIImageView</string>
+							<string>UILabel</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>categoryRatingLabel</string>
+							<string>createdDateLabel</string>
+							<string>nameLabel</string>
+							<string>photoImageView</string>
+							<string>photographerNameLabel</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">categoryRatingLabel</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">createdDateLabel</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">nameLabel</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">photoImageView</string>
+								<string key="candidateClassName">UIImageView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">photographerNameLabel</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PhotoTableViewCell.h</string>
+					</object>
+				</object>
+			</object>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
